--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <title>Isaac Anohene</title>
 </head>
 <body>
@@ -65,38 +82,38 @@
             <h2>Some of My Projects</h2>
         </div>
         <div class="projects-pages">
-            <div>
-                <img src="images/marthy.png" alt="marthy">
-                <h3>Marthy's Deco</h3>
-                <p>An E-Commerce app made with Flutter.</p>
+            <div class="wrapper">
+                <div class="image"><img src="images/marthy.png" alt="marthy"></div>
+                    <h3>Marthy's Deco</h3>
+                    <p>An E-Commerce app made with Flutter.</p>
             </div>
-            <div>
-                <img src="images/music.png" alt="music player">
+            <div class="wrapper">
+                <div class="image"><img src="images/music.png" alt="music player"></div>
                 <h3>Neumorphic Music Player</h3>
                 <p>A Music Player app made with Flutter.</p>
             </div>
-            <div>
-                <img src="images/schedo.png" alt="schedo">
+            <div class="wrapper">
+                <div class="image"><img src="images/schedo.png" alt="schedo"></div>
                 <h3>Schedo</h3>
                 <p>A Scheduling mobile app made with Flutter.</p>
             </div>
-            <div>
-                <img src="images/surftut.png" alt="surftut">
+            <div class="wrapper">
+                <div class="image"><img src="images/surftut.png" alt="surftut"></div>
                 <h3>SurfTut</h3>
                 <p>A Surfing tutor finding mobile app made with Flutter.</p>
             </div>
-            <div>
-                <img src="images/achieve.png" alt="achieve">
+            <div class="wrapper">
+                <div class="image"><img src="images/achieve.png" alt="achieve"></div>
                 <h3></h3>
                 <p>A clean and minimal business web template made with HTML & CSS.</p>
             </div>
-            <div>
-                <img src="images/builder.png" alt="builder">
+            <div class="wrapper">
+                <div class="image"><img src="images/builder.png" alt="builder"></div>
                 <h3>Builder</h3>
                 <p>A clean and minimal responsive web template made with HTML & CSS.</p>
             </div>
-            <div>
-                <img src="images/poweris.png" alt="poweris">
+            <div class="wrapper">
+                <div class="image"><img src="images/poweris.png" alt="poweris"></div>
                 <h3>Poweris</h3>
                 <p>A modern web design template made with HTML & CSS.</p>
             </div>
@@ -108,10 +125,15 @@
             <h2>Contact Me</h2>
         </div>
         <div class="contact-pages">
-
+            <a href="https://twitter.com/anohene1"><div class="social-button"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+            <a href="https://www.linkedin.com/in/isaac-anohene-688276159"><div class="social-button"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a>
+            <a href="https://github.com/anohene1"><div class="social-button"><i class="fa fa-github" aria-hidden="true"></i></div></a>
+            <a href="mailto:anoheneisaac@gmail.com"><div class="social-button"><i class="fa fa-envelope" aria-hidden="true"></i></div></a>
+            <a href="https://wa.link/zcp9ss"><div class="social-button"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a>
         </div>
     </section>
 
+    <script src="https://use.fontawesome.com/207d992782.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js" integrity="sha512-HzAEuXwhLxwm/Jj+5ecdjzrRVrjuh2ZeIxyT1Ln37TO5pWNMnKBuU7cfd1wvRQ/k86w1oC174Yk1T7aRlBpIcA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js" integrity="sha512-Ey+nIg+Ue8gUAaCNjR1KHR8nwDjWn9QXoQbynR/X+V66s6u1oqynnuRQ8zSgg5f5gBNb2Bzsu1pItCi3sPkbfA==" crossorigin="anonymous"></script>
     <script src="index.js"></script>
