add text animation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
     <section id="landing">
         <div>
-            <h1>Iz.</h1>
+            <svg  viewBox="0 0 1350 600">
+                    <text x="50%" y="50%" fill="transparent" text-anchor="middle">
+                        Iz.
+                    </text>
+                </svg>
             <p>I’m Isaac Anohene, a mobile app developer, web developer and memer.</p>
         </div>
     </section>
@@ -125,12 +129,12 @@
             <h2>Contact Me</h2>
         </div>
         <div class="contact-pages">
-            <a href="https://twitter.com/anohene1"><div class="social-button"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-            <a href="https://www.linkedin.com/in/isaac-anohene-688276159"><div class="social-button"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a>
-            <a href="https://github.com/anohene1"><div class="social-button"><i class="fa fa-github" aria-hidden="true"></i></div></a>
-            <a href="mailto:anoheneisaac@gmail.com"><div class="social-button"><i class="fa fa-envelope" aria-hidden="true"></i></div></a>
-            <a href="https://wa.link/zcp9ss"><div class="social-button"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a>
-        </div>
+            <a href="https://twitter.com/anohene1" target="_blank"><div class="social-button"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+            <a href="https://www.linkedin.com/in/anohene1" target="_blank"><div class="social-button"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a>
+            <a href="https://github.com/anohene1" target="_blank"><div class="social-button"><i class="fa fa-github" aria-hidden="true"></i></div></a>
+            <a href="mailto:anoheneisaac@gmail.com" target="_blank"><div class="social-button"><i class="fa fa-envelope" aria-hidden="true"></i></div></a>
+            <a href="https://wa.link/vjfnz5" target="_blank"><div class="social-button"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a>
+           </div>
     </section>
 
     <script src="https://use.fontawesome.com/207d992782.js"></script>
