--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p>CSS</p>
             </div>
             <div>
-                <p>Javascript / NodeJS</p>
+                <p>Javascript / React</p>
             </div>
             <div>
                 <p>Dart / Flutter</p>
