--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="skills-pages">
             <div>
-                <p>Full Stack Web Development </p>
+                <p>Front-end Web Development </p>
             </div>
             <div>
                 <p>Mobile App Development</p>
