fixed mobile link clicking issue

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="about">
-        <div class="about-title">
+        <div class="about-title sticky">
             <h2>About Me</h2>
         </div>
         <div class="about-pages">
@@ -48,7 +48,7 @@
     </section>
 
     <section id="skills">
-        <div class="skills-title">
+        <div class="skills-title sticky">
             <h2>My Skills</h2>
         </div>
         <div class="skills-pages">
@@ -62,7 +62,7 @@
     </section>
 
     <section id="languages">
-        <div class="languages-title">
+        <div class="languages-title sticky">
             <h2>Languages / Frameworks</h2>
         </div>
         <div class="languages-pages">
@@ -82,7 +82,7 @@
     </section>
 
     <section id="projects">
-        <div class="projects-title">
+        <div class="projects-title sticky">
             <h2>Some of My Projects</h2>
         </div>
         <div class="projects-pages">
