--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2>About Me</h2>
         </div>
         <div class="about-pages">
-            <p>I’m Isaac Anohene, a final year Computer Science student at KNUST. </p>
+            <p>I'm a web and mobile app developer with a passion for creating pixel-perfect, intuitive and user-friendly experiences. I have a strong background in Flutter and React. In my free time, I enjoy staying up to date on the latest industry trends and continually learning new technologies.</p>
         </div>
     </section>
 
@@ -63,17 +63,17 @@
 
     <section id="languages">
         <div class="languages-title sticky">
-            <h2>Languages / Frameworks</h2>
+            <h2>Languages & Frameworks</h2>
         </div>
         <div class="languages-pages">
             <div>
-                <p>HTML</p>
+                <p>SCSS / Tailwind</p>
             </div>
             <div>
-                <p>CSS / SCSS</p>
+                <p>JavaScript / TypeScript</p>
             </div>
             <div>
-                <p>Javascript / React</p>
+                <p>React / NextJS</p>
             </div>
             <div>
                 <p>Dart / Flutter</p>
@@ -113,9 +113,9 @@
                 <p>A crowdfunding web template built with HTML, CSS & JavaScript as a challenge by Frontend Mentor.</p>
             </div>
             <div class="wrapper">
-                <div class="image"><a href="https://github.com/anohene1/audify" target="_blank"><img src="images/audify.png" alt="audify"></a></div>
-                <h3>Audify</h3>
-                <p>An app that lets you take a picture or upload a picture from your gallery and read it out loud. Built with Flutter.</p>
+                <div class="image"><a href="https://github.com/anohene1/companera" target="_blank"><img src="images/companera.png" alt="companera"></a></div>
+                <h3>Compañera</h3>
+                <p>A cross-platform mobile application that uses the accelerometer of the phone to detect falls; uses the camera and Machine Learning to translate sign language; recognises and reads text from images..</p>
             </div>
             <div class="wrapper">
                 <div class="image"><a href="https://nature-614.netlify.app" target="_blank"><img src="images/nature.png" alt="nature"></a></div>
