add new projects

--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
         </div>
         <div class="projects-pages">
             <div class="wrapper">
-                <div class="image"><a href="https://american-airlines-614.netlify.app" target="_blank"><img src="images/american-airlines.png" alt="american airlines"></a></div>
-                    <h3>American Airlines</h3>
-                    <p>An HTML, CSS and JavaScript implementation of a UI Design by <a
-                            href="https://twitter.com/SpontaneousKemi">@SpontaneousKemi</a></p>
+                <div class="image"><a href="https://anotherblog.vercel.app" target="_blank"><img src="images/another-blog.jpg" alt="another blog"></a></div>
+                    <h3>AnotherBlog</h3>
+                    <p>A fullstack blog built with Strapi, GraphQL, NextJS and TailwindCSS</p>
             </div>
             <div class="wrapper">
                 <div class="image"><a href="https://github.com/anohene1/somenewsapp" target="_blank"><img src="images/newsapp.png" alt="some news app"></a></div>
@@ -103,14 +102,14 @@
                 <p>A task scheduling and reminder app built with Flutter.</p>
             </div>
             <div class="wrapper">
-                <div class="image"><a href="https://sunnyside-agency-614.netlify.app" target="_blank"><img src="images/sunnyside.png" alt="sunnyside"></a></div>
-                <h3>Sunnyside</h3>
-                <p>A landing page web template for an advertising agency built with HTML, CSS & JavaScript as a challenge by Frontend Mentor.</p>
+                <div class="image"><a href="https://twitter-recreations.vercel.app/ipad-mini" target="_blank"><img src="images/ipad-mini.png" alt="ipad-mini"></a></div>
+                <h3>iPad Mini Landing</h3>
+                <p>A recreation of Apple's iPad Mini landing page. Built with NextJS, SCSS and GSAP.</p>
             </div>
             <div class="wrapper">
-                <div class="image"><a href="https://crowdfunding-product-page-614.netlify.app/" target="_blank"><img src="images/crowdfundd.png" alt="crowdfund"></a></div>
-                <h3>CrowdFund</h3>
-                <p>A crowdfunding web template built with HTML, CSS & JavaScript as a challenge by Frontend Mentor.</p>
+                <div class="image"><a href="https://twitter-recreations.vercel.app/apple-vision-pro" target="_blank"><img src="images/vision-pro.jpg" alt="vision pro"></a></div>
+                <h3>Apple Vision Pro Landing</h3>
+                <p>My attempt at recreating the Apple Vision Pro landing page with all the animations. Built with NextJS, SCSS, and GSAP.</p>
             </div>
             <div class="wrapper">
                 <div class="image"><a href="https://github.com/anohene1/companera" target="_blank"><img src="images/companera.png" alt="companera"></a></div>
@@ -118,9 +117,9 @@
                 <p>A cross-platform mobile application that uses the accelerometer of the phone to detect falls; uses the camera and Machine Learning to translate sign language; recognises and reads text from images..</p>
             </div>
             <div class="wrapper">
-                <div class="image"><a href="https://nature-614.netlify.app" target="_blank"><img src="images/nature.png" alt="nature"></a></div>
-                <h3>Nature</h3>
-                <p>A clean and minimal responsive web template made with HTML & CSS.</p>
+                <div class="image"><a href="https://twitter-recreations.vercel.app/iphone-14-pro" target="_blank"><img src="images/iphone-14-pro.png" alt="ipone-14-pro"></a></div>
+                <h3>iPhone 14 Pro Landing</h3>
+                <p>A recreation of the iPhone 14 Pro landing page with all animations. Created with NextJS, SCSS and GSAP.</p>
             </div>
             <div class="wrapper">
                 <div class="image"><a href="https://github.com/anohene1/car_insurance_checker" target="_blank"><img src="images/car.png" alt="car insurance checker"></a></div>
