--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         </div>
         <div class="projects-pages">
             <div class="wrapper">
-                <div class="image"><a href="https://anotherblog.vercel.app" target="_blank"><img src="images/another-blog.jpg" alt="another blog"></a></div>
-                    <h3>AnotherBlog</h3>
-                    <p>A fullstack blog built with Strapi, GraphQL, NextJS and TailwindCSS</p>
+                <div class="image"><a href="https://marthys.vercel.app" target="_blank"><img src="images/marthys.webp" alt="another blog"></a></div>
+                    <h3>Marthy's</h3>
+                    <p>A modern blog platform developed using Firebase, NextJS and TailwindCSS</p>
             </div>
             <div class="wrapper">
                 <div class="image"><a href="https://github.com/anohene1/somenewsapp" target="_blank"><img src="images/newsapp.png" alt="some news app"></a></div>
